--- a/Module-04/index.html
+++ b/Module-04/index.html
@@ -11,7 +11,7 @@
 
         <header class="page-header">
                 <nav class="page-nav container">
-                        <img class="site-icon" src="img/mart.png" alt="text MART-name of store">
+                        <a class="logo" href="#"> <img  src="img/mart.png" alt="text MART-name of store"> </a>
             
                                 <ul class="site-navigation clearfix">
                                         <li><a href="#">home</a></li>
