--- a/Module-04/index.html
+++ b/Module-04/index.html
@@ -10,7 +10,7 @@
 <body>
 
         <header class="page-header">
-                <nav class="page-nav container">
+                <nav class="page-nav container clearfix">
                         <a class="logo" href="#"> <img  src="img/mart.png" alt="text MART-name of store"> </a>
             
                                 <ul class="site-navigation clearfix">
