--- a/Module-05/index.html
+++ b/Module-05/index.html
@@ -1,91 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Homework-05</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,700i|Roboto:900,300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <header class="page-header ">
-      <nav class="page-nav container clearfix">
-        <a class="logo" href="#">
-          <img src="img/mart.png" alt="text MART-name of store" />
-        </a>
+<head>
+  <meta charset="UTF-8" />
+  <title>Homework-05</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,700i|Roboto:900,700,100&display=swap" rel="stylesheet">
+</head>
 
-        <ul class="site-navigation clearfix">
-          <li><a href="#">home</a></li>
-          <li><a href="#">about us</a></li>
-          <li><a href="#">page</a></li>
-          <li><a href="#">shop</a></li>
-          <li><a href="#">blog</a></li>
-          <li><a href="#">contact us</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header class="page-header ">
+    <nav class="page-nav container clearfix">
+      <a class="logo" href="#">
+        <img src="img/mart.png" alt="text MART-name of store" />
+      </a>
 
-    <main>
-      <div class="first-section">
-        <div class="first-section-wrapper container">
-            <div class="first-section-content">
-              <h1 class="headline">AFFORDABLE PARIS TOURS</h1>
-              <p class="description">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
-            </div>
-            <button class="button-left"></button>
-            <button class="button-right"></button>
+      <ul class="site-navigation clearfix">
+        <li><a href="#">home</a></li>
+        <li><a href="#">about us</a></li>
+        <li><a href="#">page</a></li>
+        <li><a href="#">shop</a></li>
+        <li><a href="#">blog</a></li>
+        <li><a href="#">contact us</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div class="first-section">
+      <div class="first-section-wrapper container">
+        <div class="first-section-content">
+          <h1 class="headline">AFFORDABLE PARIS TOURS</h1>
+          <p class="description">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
         </div>
+        <button class="button-left">&#60;</button>
+        <button class="button-right">&#62;</button>
       </div>
-    
-<section class="feature-list">
-     <h2 class="second-headline"> NEW COLLECTION</h2>
-    <ul class="features-list-item clearfix">
+    </div>
 
-        <li class="product" >
-            <a class="img-link "> <img class="product-img"  src="./img/blue_tshirt.png"  alt="blue-tshirt"> 
-                <div class="text-area">
-                    <p class="product-text"> BLUE TSHIRT  </p> 
-                    <p class="product-price">       $26   </p>
+    <section class="feature-list ">
+      <div class="box-list">
+        <h2 class="second-headline"> NEW COLLECTION</h2>
+        <ul class="features-list-item clearfix">
+
+          <li class="product">
+            <a class="img-link "> <img class="product-img" src="./img/blue_tshirt.png" alt="blue-tshirt">
+              <div class="text-area">
+                <p class="product-text"> BLUE TSHIRT </p>
+                <p class="product-price"> $26 </p>
+
+                <div class="hover_content">
+                  <ul class="list_socials">
+                    <li><button class="list_socials_btn like">  </button></li>
+                    <li><button class="list_socials_btn shafl"> </button></li>
+                    <li><button class="list_socials_btn clock"> </button></li>
+                    <li><button class="list_socials_btn adtocard">add to cart </button></li>
+                  </ul>
                 </div>
+              </div>
             </a>
-        </li>
+          </li>
 
-        <li class="product" >
-             <a class="img-link "> <img class="product-img"  src="./img/woman_shirt.png"  alt="woman-tshirt"> 
-                <div class="text-area">
-                    <p class="product-text"> WOMAN SHIRT  </p> 
-                    <p class="product-price">       $31   </p>
-                </div>
+          <li class="product">
+            <a class="img-link "> <img class="product-img woman_shirt" src="./img/woman_shirt.png" alt="woman-tshirt">
+              <div class="text-area">
+                <p class="product-text"> WOMAN SHIRT </p>
+                <p class="product-price"> $31 </p>
+              </div>
             </a>
-        </li>
+          </li>
 
-        <li class="product" >
-            <a class="img-link "> <img class="product-img"  src="./img/yellow_tshirt.png"  alt="yellow-tshirt"> 
-                <div class="text-area">
-                    <p class="product-text"> YELLOW TSHIRT  </p> 
-                    <p class="product-price">       $21   </p>
-                </div>
+          <li class="product">
+            <a class="img-link "> <img class="product-img" src="./img/yellow_tshirt.png" alt="yellow-tshirt">
+              <div class="text-area">
+                <p class="product-text"> YELLOW TSHIRT </p>
+                <p class="product-price"> $21 </p>
+              </div>
             </a>
-        </li>
+          </li>
 
-        <li class="product" >
-            <a class="img-link "> <img class="product-img"  src="./img/cool_linger.png"  alt="cool lingerie"> 
-                <div class="text-area">
-                    <p class="product-text"> COOL LINGERIE  </p> 
-                    <p class="product-price">       $56   </p>
-                </div>
+          <li class="product">
+            <a class="img-link "> <img class="product-img" src="./img/cool_linger.png" alt="cool lingerie">
+              <div class="text-area">
+                <p class="product-text"> COOL LINGERIE </p>
+                <p class="product-price"> $56 </p>
+              </div>
             </a>
-        </li>
+          </li>
 
 
-               
-    </ul>
-</section>
 
-</main>
+        </ul>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="footer_list">
+    <p class="footer_text">All Rights Reserved © Dokan | Designed <span class="footer_span"> ThemenGraph</span></p>
+  </footer>
 
 </body>
 
