--- a/Module-06/index.html
+++ b/Module-06/index.html
@@ -95,105 +95,66 @@
                     blanditiis dolor eaque, ratione nemo eos dicta fugit aperiam.</p>
 
                 <div class="wrapper">
+                    <!-- 1 photo container -->
                     <div class="flex_container_wrap">
                         <img class="photo" src="./img/photos/matthew.png" alt="photo">
-                        <div class="flex_item">
-                            <button class="flex_links"><a href="https://www.facebook.com/"></a></button>
-                            <button class="flex_links"><a href="https://twitter.com/"></a></button>
-                            <button class="flex_links"><a href="https://www.pinterest.com/"></a></button>
-                            <button class="flex_links"><a href="https://www.instagram.com"></a></button>
-                        </div>
                         <p class="name_list">MATTHEW DIX</p>
                         <p class="profession_list">Graphic Design</p>
+                        <div class="hover_contant">
+                            <div class="flex_item">
+                                <button class="flex_links facebook"><a href="https://www.facebook.com/"></a></button>
+                                <button class="flex_links twitter"><a href="https://twitter.com/"></a></button>
+                                <button class="flex_links pinterest"><a href="https://www.pinterest.com/"></a></button>
+                                <button class="flex_links instagram"><a href="https://www.instagram.com"></a></button>
+                            </div>
+                        </div>
                     </div>
-
+                    <!-- 2 photo container -->
                     <div class="flex_container_wrap">
                         <img class="photo" src="./img/photos/christopher.png" alt="photo">
-                        <div class="flex_item">
-                            <button class="flex_links"><a href="https://www.facebook.com/"></a></button>
-                            <button class="flex_links"><a href="https://twitter.com/"></a></button>
-                            <button class="flex_links"><a href="https://www.pinterest.com/"></a></button>
-                            <button class="flex_links"><a href="https://www.instagram.com"></a></button>
-                        </div>
                         <p class="name_list">CRISTOPHER CAMPBELL</p>
                         <p class="profession_list">Branding/UX design</p>
+                        <div class="hover_contant">
+                            <div class="flex_item">
+                                <button class="flex_links facebook"><a href="https://www.facebook.com/"></a></button>
+                                <button class="flex_links twitter"><a href="https://twitter.com/"></a></button>
+                                <button class="flex_links pinterest"><a href="https://www.pinterest.com/"></a></button>
+                                <button class="flex_links instagram"><a href="https://www.instagram.com"></a></button>
+                            </div>
+                        </div>
                     </div>
-                
 
-                <div class="flex_container_wrap">
-                    <img class="photo" src="./img/photos/michael.png" alt="photo">
-                    <div class="flex_item">
-                        <button class="flex_links"><a href="https://www.facebook.com/"></a></button>
-                        <button class="flex_links"><a href="https://twitter.com/"></a></button>
-                        <button class="flex_links"><a href="https://www.pinterest.com/"></a></button>
-                        <button class="flex_links"><a href="https://www.instagram.com"></a></button>
+                    <!-- 3 photo container -->
+                    <div class="flex_container_wrap">
+                        <img class="photo" src="./img/photos/michael.png" alt="photo">
+                        <p class="name_list">MICHAEL FERTIG </p>
+                        <p class="profession_list">Developer</p>
+                        <div class="hover_contant">
+                            <div class="flex_item">
+                                <button class="flex_links facebook"><a href="https://www.facebook.com/"></a></button>
+                                <button class="flex_links twitter"><a href="https://twitter.com/"></a></button>
+                                <button class="flex_links pinterest"><a href="https://www.pinterest.com/"></a></button>
+                                <button class="flex_links instagram"><a href="https://www.instagram.com"></a></button>
+                            </div>
+                        </div>
                     </div>
-                    <p class="name_list">MICHAEL FERTIG </p>
-                    <p class="profession_list">Developer</p>
+
                 </div>
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
     </main>
+
+    <footer class="footer container">
+        <div class="text_footer">
+            <p> © 2016 MoGo free PSD template by <span class="span_text">Laaqiq</span></p>
+        </div>
+        <form action="#" class="footer__form">
+            <input type="text" class="footer__input__box" placeholder="Your Email...">
+            <input type="submit" value="SUBSCRIBE" class="footer__input__button">
+        </form>
+
+    </footer>
 
 </body>
 
