--- a/Module-06/index.html
+++ b/Module-06/index.html
@@ -102,10 +102,10 @@
                         <p class="profession_list">Graphic Design</p>
                         <div class="hover_contant">
                             <div class="flex_item">
-                                <button class="flex_links facebook"><a href="https://www.facebook.com/"></a></button>
-                                <button class="flex_links twitter"><a href="https://twitter.com/"></a></button>
-                                <button class="flex_links pinterest"><a href="https://www.pinterest.com/"></a></button>
-                                <button class="flex_links instagram"><a href="https://www.instagram.com"></a></button>
+                                <a class="flex_links facebook" href="https://www.facebook.com/"></a>
+                                <a class="flex_links twitter" href="https://twitter.com/"></a>
+                                <a class="flex_links pinterest" href="https://www.pinterest.com/"></a>
+                                <a class="flex_links instagram" href="https://www.instagram.com"></a>
                             </div>
                         </div>
                     </div>
@@ -116,10 +116,10 @@
                         <p class="profession_list">Branding/UX design</p>
                         <div class="hover_contant">
                             <div class="flex_item">
-                                <button class="flex_links facebook"><a href="https://www.facebook.com/"></a></button>
-                                <button class="flex_links twitter"><a href="https://twitter.com/"></a></button>
-                                <button class="flex_links pinterest"><a href="https://www.pinterest.com/"></a></button>
-                                <button class="flex_links instagram"><a href="https://www.instagram.com"></a></button>
+                                <a class="flex_links facebook" href="https://www.facebook.com/"></a>
+                                <a class="flex_links twitter" href="https://twitter.com/"></a>
+                                <a class="flex_links pinterest" href="https://www.pinterest.com/"></a>
+                                <a class="flex_links instagram" href="https://www.instagram.com"></a>
                             </div>
                         </div>
                     </div>
@@ -131,10 +131,10 @@
                         <p class="profession_list">Developer</p>
                         <div class="hover_contant">
                             <div class="flex_item">
-                                <button class="flex_links facebook"><a href="https://www.facebook.com/"></a></button>
-                                <button class="flex_links twitter"><a href="https://twitter.com/"></a></button>
-                                <button class="flex_links pinterest"><a href="https://www.pinterest.com/"></a></button>
-                                <button class="flex_links instagram"><a href="https://www.instagram.com"></a></button>
+                                <a class="flex_links facebook" href="https://www.facebook.com/"></a>
+                                <a class="flex_links twitter" href="https://twitter.com/"></a>
+                                <a class="flex_links pinterest" href="https://www.pinterest.com/"></a>
+                                <a class="flex_links instagram" href="https://www.instagram.com"></a>
                             </div>
                         </div>
                     </div>
