--- a/Module-07/index.html
+++ b/Module-07/index.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HomeWork-07</title>
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,700i|Roboto:900,700,100,300i|Montserrat:400,700|Kaushan+Script&display=swap"
-        rel="stylesheet">
+    
 </head>
 
 <body>
@@ -43,7 +41,7 @@
                         <p class="description__item">Proin iaculis purus consequat sem cure
                             digni ssim. Donec porttitora entum suscipit
                             aenean rhoncus posuere odio in tincidunt.</p>
-                            <div class="round"></div>
+
                     </div>
 
                     <div class="product__item laptop">
@@ -51,7 +49,7 @@
                         <p class="description__item">Proin iaculis purus consequat sem cure
                             digni ssim. Donec porttitora entum suscipit
                             aenean rhoncus posuere odio in tincidunt.</p>
-                            <div class="round"></div>
+
 
                     </div>
 
@@ -60,7 +58,6 @@
                         <p class="description__item">Proin iaculis purus consequat sem cure
                             digni ssim. Donec porttitora entum suscipit
                             aenean rhoncus posuere odio in tincidunt.</p>
-                            <div class="round"></div>
                     </div>
                 </div>
             </div>
@@ -72,42 +69,19 @@
                 <p class="second__headline__text">Proin iaculis purus consequat sem cure. </p>
 
 
-<form action="#">
-    <div class="text__box">
-        <div class="input__box">
-            <input class="input__content" type="text">
-            <input class="input__content" type="text">
-            <input class="input__content" type="text">
-        </div>
-        <div>
-            <textarea class="text__area" name="your__message" id="" cols="30" rows="10"></textarea>
-        </div>
-    </div>
-    <input class="input__text" type="submit">
-</form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                <form action="#">
+                    <div class="text__box">
+                        <div class="input__box">
+                            <input required class="input__content" type="text" placeholder="YOUR NAME*">
+                            <input required class="input__content" type="text" placeholder="YOUR E-MAIL*">
+                            <input required class="input__content" type="text" placeholder="SUBJECT">
+                        </div>
+                        <div class="textarea__box">
+                            <textarea class="text__area"placeholder="YOUR MESSAGE*" name="" id="" cols="30" rows="10"></textarea>
+                        </div>
+                    </div>
+                    <input required class="input__text" value="SEND MESSAGE" type="submit">
+                </form>
 
             </div>
 
