--- a/Module-07/index.html
+++ b/Module-07/index.html
@@ -72,12 +72,12 @@
                 <form action="#">
                     <div class="text__box">
                         <div class="input__box">
-                            <input required class="input__content" type="text" placeholder="YOUR NAME*">
-                            <input required class="input__content" type="text" placeholder="YOUR E-MAIL*">
-                            <input required class="input__content" type="text" placeholder="SUBJECT">
+                            <input required class="input__content" name="name" type="text" placeholder="YOUR NAME*">
+                            <input required class="input__content" name="email" type="text" placeholder="YOUR E-MAIL*">
+                            <input required class="input__content" name="subject" type="text" placeholder="SUBJECT">
                         </div>
                         <div class="textarea__box">
-                            <textarea class="text__area"placeholder="YOUR MESSAGE*" name="" id="" cols="30" rows="10"></textarea>
+                            <textarea name="message" class="text__area" placeholder="YOUR MESSAGE*" cols="30" rows="10" required></textarea>
                         </div>
                     </div>
                     <input required class="input__text" value="SEND MESSAGE" type="submit">
@@ -92,19 +92,3 @@
 </body>
 
 </html>
-
-
-
-<!-- <form action="#">
-    <div>
-        <div>
-            <input type="text">
-            <input type="text">
-            <input type="text">
-        </div>
-        <div>
-            <text area
-        </div>
-    </div>
-    <input type="submit">
-</form> -->
